extend CREATE MODEL query to accept logging configuration