@@ -20,17 +20,20 @@ import org.jboss.netty.handler.execution.MemoryAwareThreadPoolExecutor
 import unfiltered.response._
 import unfiltered.request._
 import unfiltered.netty.{cycle, ServerErrorResponse}
-import us.jubat.jubaql_server.gateway.json.{Unregister, Register, Query, SessionId, QueryToProcessor}
+import us.jubat.jubaql_server.gateway.json._
 import scala.collection.mutable
 import org.json4s.DefaultFormats
 import org.json4s.native.Serialization.write
-import scala.util.Random
 import scala.util.{Try, Success, Failure}
 import java.io._
 import dispatch._
 import dispatch.Defaults._
 import java.util.jar.JarFile
 import java.nio.file.{StandardCopyOption, Files}
+import scala.concurrent.Await
+import scala.concurrent.duration._
+import scala.collection.mutable.{ArrayBuffer, LinkedHashMap}
+import scala.collection.Map
 
 // A Netty plan using async IO
 // cf. <http://unfiltered.databinder.net/Bindings+and+Servers.html>.
@@ -40,7 +43,8 @@ import java.nio.file.{StandardCopyOption, Files}
 class GatewayPlan(ipAddress: String, port: Int,
                   envpForProcessor: Array[String], runMode: RunMode,
                   sparkDistribution: String, fatjar: String,
-                  checkpointDir: String)
+                  checkpointDir: String, gatewayId: String, persistSession: Boolean,
+                  threads: Int, channelMemory: Long, totalMemory: Long)
   extends cycle.Plan
   /* With cycle.SynchronousExecution, there is a group of N (16?) threads
      (named "nioEventLoopGroup-5-*") that will process N requests in
@@ -62,12 +66,23 @@ class GatewayPlan(ipAddress: String, port: Int,
   // for error handling
   with ServerErrorResponse
   with LazyLogging {
-  lazy val underlying = new MemoryAwareThreadPoolExecutor(16, 65536, 1048576)
+  lazy val underlying = new MemoryAwareThreadPoolExecutor(threads, channelMemory, totalMemory)
 
-  // holds session ids mapping to keys and host:port locations, respectively
-  val session2key: mutable.Map[String, String] = new mutable.HashMap()
-  val key2session: mutable.Map[String, String] = new mutable.HashMap()
-  val session2loc: mutable.Map[String, (String, Int)] = new mutable.HashMap()
+  val Lineseparator = System.lineSeparator()
+  val StateRunStr = "state: RUNNING"
+
+  // SessionManager: holds session ids mapping to keys and host:port locations, respectively
+  val sessionManager = try {
+    persistSession match {
+      case true => new SessionManager(gatewayId, new ZookeeperStore)
+      case false => new SessionManager(gatewayId)
+    }
+  } catch {
+    case e: Throwable => {
+      logger.error("failed to start session manager", e)
+      throw e
+    }
+  }
 
   /* When starting the processor using spark-submit, we rely on a certain
    * logging behavior. It seems like the log4j.xml file bundled with
@@ -93,113 +108,262 @@ class GatewayPlan(ipAddress: String, port: Int,
 
   val errorMsgContentType = ContentType("text/plain; charset=utf-8")
 
+  val DefaultTimeout: Long = 60000
+  val submitTimeout = try {
+    val timeoutString: String = System.getProperty("jubaql.gateway.submitTimeout", DefaultTimeout.toString)
+    val timeout = timeoutString.toLong
+    if (timeout < 1) {
+      throw new Exception(s"""jubaql.gateway.submitTimeout value must be "1 <= n <= ${Long.MaxValue}"""")
+    }
+    timeout
+  } catch {
+    case e: Exception =>
+      logger.warn(s"failed get jubaql.gateway.submitTimeout property. Use default Timeout : ${DefaultTimeout}", e)
+      DefaultTimeout
+  }
+  logger.debug(s"set spark-submit startingTimeout = $submitTimeout ms")
+
+  // Path of the JubaQL Processor's log4j.xml
+  val processorLogConfigPath: Option[String] = {
+    Option(System.getProperty("jubaql.processor.logconf")) match {
+      case Some(path) if !path.isEmpty() =>
+        logger.debug(s"set JubaQL Processor's log4j configuration = ${path}")
+        Some(path)
+      case _ =>
+        None
+    }
+  }
+
   implicit val formats = DefaultFormats
+
+  private val statusLock = new AnyRef
+  var queryTransferCount: Long = 0
+  var queryReceivedCount: Long = 0
+  val startTime = System.currentTimeMillis()
 
   def intent = {
     case req@POST(Path("/login")) =>
-      var sessionId = ""
-      var key = ""
+      val body = readAllFromReader(req.reader)
       val reqSource = req.remoteAddr
-      logger.info(f"received HTTP request at /login from $reqSource%s")
-      session2key.synchronized {
-        do {
-          sessionId = Alphanumeric.generate(20) // TODO: generate in a more sophisticated way.
-        } while (session2key.get(sessionId) != None)
-        do {
-          key = Alphanumeric.generate(20) // TODO: generate in a more sophisticated way.
-        } while (key2session.get(key) != None)
-        session2key += (sessionId -> key)
-        key2session += (key -> sessionId)
-      }
-      val callbackUrl = composeCallbackUrl(ipAddress, port, key)
+      logger.debug(f"received HTTP request at /login from $reqSource%s with body: $body%s")
 
-      val runtime = Runtime.getRuntime
-      val cmd = mutable.ArrayBuffer(f"$sparkDistribution%s/bin/spark-submit",
-                                    "--class", "us.jubat.jubaql_server.processor.JubaQLProcessor",
-                                    "--master", "", // set later
-                                    "--conf", "", // set later
-                                    "--conf", s"log4j.configuration=file:$tmpLog4jPath",
-                                    fatjar,
-                                    callbackUrl)
-      logger.info(f"starting Spark in run mode $runMode%s (session_id: $sessionId%s)")
-      val divide = runMode match {
-        case RunMode.Production(zookeeper, numExecutors, coresPerExecutor, sparkJar) =>
-          cmd.update(4, "yarn-cluster") // --master
-          // When we run the processor on YARN, any options passed in with run.mode
-          // will be passed to the SparkSubmit class, not the the Spark driver. To
-          // get the run.mode passed one step further, we use the extraJavaOptions
-          // variable. It is important to NOT ADD ANY QUOTES HERE or they will be
-          // double-escaped on their way to the Spark driver and probably never end
-          // up there.
-          cmd.update(6, "spark.driver.extraJavaOptions=-Drun.mode=production " +
-            s"-Djubaql.zookeeper=$zookeeper " +
-            s"-Djubaql.checkpointdir=$checkpointDir") // --conf
-          // also specify the location of the Spark jar file, if given
-          val sparkJarParams = sparkJar match {
-            case Some(url) => "--conf" :: s"spark.yarn.jar=$url" :: Nil
-            case _ => Nil
-          }
-          cmd.insertAll(9, "--num-executors" :: numExecutors.toString ::
-            "--executor-cores" :: coresPerExecutor.toString :: sparkJarParams)
-          logger.debug("executing: " + cmd.mkString(" "))
-
-          Try {
-            val maybeProcess = Try(runtime.exec(cmd.toArray, envpForProcessor))
-
-            maybeProcess.flatMap { process =>
-              // NB. which stream we have to use and whether the message we are
-              // waiting for actually appears, depends on the log4j.xml file
-              // bundled in the application jar...
-              val is: InputStream = process.getInputStream
-              val isr = new InputStreamReader(is)
-              val br = new BufferedReader(isr)
-              var line: String = br.readLine()
-              while (line != null && !line.trim.contains("state: RUNNING")) {
-                if (line.contains("Exception")) {
-                  logger.error(line)
-                  throw new RuntimeException("could not start spark-submit")
-                }
-                line = br.readLine()
+      val maybeJson = org.json4s.native.JsonMethods.parseOpt(body)
+      val maybeSessionId = maybeJson.flatMap(_.extractOpt[SessionId])
+      maybeSessionId match {
+        case Some(sessionId) =>
+          // connect existing session
+          val session = sessionManager.getSession(sessionId.session_id)
+          session match {
+            case Failure(t) =>
+              InternalServerError ~> errorMsgContentType ~> ResponseString("Failed to get session")
+            case Success(sessionInfo) =>
+              sessionInfo match {
+                case SessionState.NotFound =>
+                  logger.warn("received a query JSON without a usable session_id")
+                  Unauthorized ~> errorMsgContentType ~> ResponseString("Unknown session_id")
+                case SessionState.Registering(key) =>
+                  logger.warn(s"processor for session $key has not registered yet")
+                  ServiceUnavailable ~> errorMsgContentType ~> ResponseString("This session has not been registered. Wait a second.")
+                case SessionState.Ready(host, port, key) =>
+                  logger.info(s"received login request for existing session (${sessionId}) from ${reqSource}")
+                  val sessionIdJson = write(SessionId(sessionId.session_id))
+                  Ok ~> errorMsgContentType ~> ResponseString(sessionIdJson)
               }
-              process.destroy()
-              // TODO: consider to check line is not null here
-              Success(1)
-            }
           }
-        case RunMode.Development(numThreads) =>
-          cmd.update(4, s"local[$numThreads]") // --master
-          cmd.update(6, "run.mode=development") // --conf
-          cmd.insertAll(7, Seq("--conf", s"jubaql.checkpointdir=$checkpointDir"))
-          logger.debug("executing: " + cmd.mkString(" "))
+        case None =>
+          // connect new session
+          val session = sessionManager.createNewSession()
+          session match {
+            case Failure(t) =>
+              InternalServerError ~> errorMsgContentType ~> ResponseString("Failed to create session")
+            case Success((sessionId, key)) =>
+              val callbackUrl = composeCallbackUrl(ipAddress, port, key)
+              val gatewayAddress = s"${ipAddress}:${port}"
 
-          Try {
-            val maybeProcess = Try(runtime.exec(cmd.toArray))
+              val runtime = Runtime.getRuntime
+              val cmd = mutable.ArrayBuffer(f"$sparkDistribution%s/bin/spark-submit")
 
-            maybeProcess.flatMap { process =>
-              handleSubProcessOutput(process.getInputStream, System.out)
-              handleSubProcessOutput(process.getErrorStream, System.err)
-              Success(1)
-            }
+              val cmdOption = mutable.ArrayBuffer.empty[String]
+              cmdOption += ("--class", "us.jubat.jubaql_server.processor.JubaQLProcessor")
+              cmdOption += ("--name", s"JubaQLProcessor:$gatewayAddress:$sessionId")
+
+              val cmdParam = mutable.ArrayBuffer.empty[String]
+              cmdParam += fatjar
+              cmdParam += callbackUrl
+
+              logger.info(f"starting Spark in run mode $runMode%s (session_id: $sessionId%s)")
+              val divide = runMode match {
+                case RunMode.Production(zookeeper, numExecutors, coresPerExecutor, sparkJar, sparkDriverMemory, sparkExecutorMemory) =>
+                  cmdOption += ("--conf", s"log4j.configuration=file:${tmpLog4jPath}")
+                  cmdOption += ("--master", "yarn-cluster")
+                  // When we run the processor on YARN, any options passed in with run.mode
+                  // will be passed to the SparkSubmit class, not the the Spark driver. To
+                  // get the run.mode passed one step further, we use the extraJavaOptions
+                  // variable. It is important to NOT ADD ANY QUOTES HERE or they will be
+                  // double-escaped on their way to the Spark driver and probably never end
+                  // up there.
+                  val extraJavaOptionsBuilder = new StringBuilder("spark.driver.extraJavaOptions=")
+                    .append("-Drun.mode=production")
+                    .append(s" -Djubaql.zookeeper=$zookeeper")
+                    .append(s" -Djubaql.checkpointdir=$checkpointDir")
+                    .append(s" -Djubaql.gateway.address=$gatewayAddress")
+                    .append(s" -Djubaql.processor.sessionId=$sessionId")
+                    .append(s" -XX:MaxPermSize=128m")
+                  processorLogConfigPath.foreach { logConfigPath =>
+                    // set JubaQL Processor's log4j.xml to resource path
+                    cmdOption += ("--files", logConfigPath)
+                    extraJavaOptionsBuilder.append(s" -Dlog4j.configuration=${logConfigPath.split('/').last}")
+                  }
+                  cmdOption += ("--conf", extraJavaOptionsBuilder.toString())
+
+                  // also specify the location of the Spark jar file, if given
+                  sparkJar.foreach { url =>
+                    cmdOption += ("--conf", s"spark.yarn.jar=$url")
+                  }
+
+                  cmdOption += ("--num-executors", numExecutors.toString)
+                  cmdOption += ("--executor-cores", coresPerExecutor.toString)
+
+                  sparkDriverMemory.foreach { driverMemory =>
+                    cmdOption += ("--driver-memory", driverMemory)
+                  }
+                  sparkExecutorMemory.foreach { executorMemory =>
+                    cmdOption += ("--executor-memory", executorMemory)
+                  }
+
+                  cmd ++= cmdOption ++= cmdParam
+                  logger.debug("executing: " + cmd.mkString(" "))
+                  Try {
+                    val maybeProcess = Try(runtime.exec(cmd.toArray, envpForProcessor))
+                    maybeProcess match {
+                      case Success(_) =>
+                        maybeProcess.flatMap { process =>
+                          // cache spark-submit.log
+                          val logBuffer = new scala.collection.mutable.StringBuilder()
+
+                          val sparkProcessFuture = Future {
+                            // NB. which stream we have to use and whether the message we are
+                            // waiting for actually appears, depends on the log4j.xml file
+                            // bundled in the application jar...
+                            val is: InputStream = process.getInputStream
+                            val isr = new InputStreamReader(is)
+                            val br = new BufferedReader(isr)
+                            var line: String = br.readLine()
+                            while (line != null && !line.trim.contains(StateRunStr)) {
+                              logBuffer.append("\t" + line + Lineseparator)
+                              line = br.readLine()
+                            }
+                            val isStateRun = (line != null && line.trim.contains(StateRunStr))
+                            Try(process.exitValue) match {
+                              case Failure(t) if t.isInstanceOf[IllegalThreadStateException] =>
+                                if (isStateRun) {
+                                  logger.debug("Succeed to spark-submit")
+                                } else {
+                                  val returnCode = process.waitFor
+                                  throw new RuntimeException(s"Failed to finish process. returnCode: ${returnCode}")
+                                }
+                              case Failure(t) =>
+                                throw new RuntimeException("Failed to spark-submit", t)
+                              case Success(returnCode) =>
+                                // process finished => abnormal
+                                throw new RuntimeException(s"Failed to finish process. returnCode: ${returnCode}")
+                            }
+                          }
+                          Try(Await.result(sparkProcessFuture, Duration(submitTimeout, MILLISECONDS))) match {
+                            case Success(_) =>
+                              //watch spark-submit starting process
+                              handleSubProcess(process, sessionId)
+                              Success(1)
+                            case Failure(t) =>
+                              //get standard error
+                              val is: InputStream = process.getErrorStream
+                              val isr = new InputStreamReader(is)
+                              val br = new BufferedReader(isr)
+                              try {
+                                var line = ""
+                                while ({ line = br.readLine(); line ne null }) {
+                                  logBuffer.append("\t" + line + Lineseparator)
+                                }
+                              } finally {
+                                br.close()
+                              }
+                              if (t.isInstanceOf[java.util.concurrent.TimeoutException]) {
+                                logger.error(s"processor did not start within timeout period (${submitTimeout / 1000} seconds)${Lineseparator}spark-submit log : ${Lineseparator}" + logBuffer.toString())
+                              } else {
+                                logger.error(s"${t.getMessage}${Lineseparator}spark-submit log : ${Lineseparator}" + logBuffer.toString())
+                              }
+                              process.destroy()
+                              Failure(t)
+                          }
+                        }
+                      case Failure(e) =>
+                        Failure(e)
+                    }
+                  }
+                case RunMode.Development(numThreads) =>
+                  cmdOption += ("--master", s"local[$numThreads]")
+                  cmdOption += ("--conf", "run.mode=development")
+                  cmdOption += ("--conf", s"jubaql.checkpointdir=$checkpointDir")
+                  processorLogConfigPath match {
+                    case Some(path) =>
+                      cmdOption += ("--driver-java-options", s"-Dlog4j.configuration=${path}")
+                    case None =>
+                      cmdOption += ("--conf", s"log4j.configuration=file:${tmpLog4jPath}")
+                  }
+
+                  cmd ++= cmdOption ++= cmdParam
+                  logger.debug("executing: " + cmd.mkString(" "))
+
+                  Try {
+                    val maybeProcess = Try(runtime.exec(cmd.toArray))
+                    maybeProcess match {
+                      case Success(_) =>
+                        maybeProcess.flatMap { process =>
+                          handleSubProcessOutput(process.getInputStream, System.out)
+                          handleSubProcessOutput(process.getErrorStream, System.err)
+                          Success(1)
+                        }
+                      case Failure(t) =>
+                        Failure(t)
+                    }
+                  }
+                case RunMode.Test =>
+                  // do nothing in test mode.
+                  Success(1)
+              }
+              divide match {
+                case Success(result) =>
+                  result match {
+                    case Failure(e) =>
+                      logger.error(e.getMessage, e)
+                      InternalServerError ~> errorMsgContentType ~> ResponseString("Failed to start Spark\n")
+                    case Success(_) =>
+                      logger.info(f"started Spark with callback URL $callbackUrl%s")
+                      val sessionIdJson = write(SessionId(sessionId))
+                      Ok ~> errorMsgContentType ~> ResponseString(sessionIdJson)
+                    case 1 =>
+                      // test mode result
+                      logger.debug(f"started Spark with callback URL $callbackUrl%s in run.mode=test")
+                      val sessionIdJson = write(SessionId(sessionId))
+                      Ok ~> errorMsgContentType ~> ResponseString(sessionIdJson)
+                  }
+                case Failure(e) =>
+                  logger.error(e.getMessage, e)
+                  InternalServerError ~> errorMsgContentType ~> ResponseString("Failed to start Spark\n")
+              }
           }
-        case RunMode.Test =>
-          // do nothing in test mode.
-          Success(1)
-      }
-      divide match {
-        case Success(_) =>
-          logger.info(f"started Spark with callback URL $callbackUrl%s")
-          val sessionIdJson = write(SessionId(sessionId))
-          Ok ~> errorMsgContentType ~> ResponseString(sessionIdJson)
-        case Failure(e) =>
-          logger.error(e.getMessage)
-          InternalServerError ~> errorMsgContentType ~> ResponseString("Failed to start Spark\n")
+
       }
 
     case req@POST(Path("/jubaql")) =>
       // TODO: treat very long input
+      statusLock.synchronized {
+        queryReceivedCount += 1
+        logger.debug(s"queryReceivedCount: $queryReceivedCount")
+      }
       val body = readAllFromReader(req.reader)
       val reqSource = req.remoteAddr
-      logger.info(f"received HTTP request at /jubaql from $reqSource%s with body: $body%s")
+      logger.debug(f"received HTTP request at /jubaql from $reqSource%s with body: $body%s")
       val maybeJson = org.json4s.native.JsonMethods.parseOpt(body)
       val maybeQuery = maybeJson.flatMap(_.extractOpt[Query])
       maybeQuery match {
@@ -210,43 +374,40 @@ class GatewayPlan(ipAddress: String, port: Int,
           logger.warn("received an unacceptable JSON query")
           BadRequest ~> errorMsgContentType ~> ResponseString("Unacceptable JSON")
         case Some(query) =>
-          var maybeKey: Option[String] = None
-          var maybeLoc: Option[(String, Int)] = None
-          session2key.synchronized {
-            maybeKey = session2key.get(query.session_id)
-            maybeLoc = session2loc.get(query.session_id)
-          }
-          (maybeKey, maybeLoc) match {
-            case (None, None) =>
-              logger.warn("received a query JSON without a usable session_id")
-              Unauthorized ~> errorMsgContentType ~> ResponseString("Unknown session_id")
-            case (None, Some(loc)) =>
-              logger.error("inconsistent data in this gateway server")
-              InternalServerError ~> errorMsgContentType ~> ResponseString("Inconsistent data")
-            case (Some(key), None) =>
-              logger.warn(s"processor for session $key has not registered yet")
-              ServiceUnavailable ~> errorMsgContentType ~>
-                ResponseString("This session has not been registered. Wait a second.")
-            case (Some(key), Some(loc)) =>
-              // TODO: check forward query
-              val (host, port) = loc
+          val session = sessionManager.getSession(query.session_id)
+          session match {
+            case Failure(t) =>
+              InternalServerError ~> errorMsgContentType ~> ResponseString("Failed to get session")
+            case Success(sessionInfo) =>
+              sessionInfo match {
+                case SessionState.NotFound =>
+                  logger.warn("received a query JSON without a usable session_id")
+                  Unauthorized ~> errorMsgContentType ~> ResponseString("Unknown session_id")
+                case SessionState.Registering(key) =>
+                  logger.warn(s"processor for session $key has not registered yet")
+                  ServiceUnavailable ~> errorMsgContentType ~> ResponseString("This session has not been registered. Wait a second.")
+                case SessionState.Ready(host, port, key) =>
+                  val queryJson = write(QueryToProcessor(query.query)).toString
 
-              val queryJson = write(QueryToProcessor(query.query)).toString
+                  val url = :/(host, port) / "jubaql"
+                  val req = Http((url.POST << queryJson) > (x => x))
 
-              val url = :/(host, port) / "jubaql"
-              val req = Http((url.POST << queryJson) > (x => x))
-
-              logger.debug(f"forward query to processor ($host%s:$port%d)")
-              req.either.apply() match {
-                case Left(error) =>
-                  logger.error("failed to send request to processor [" + error.getMessage + "]")
-                  BadGateway ~> errorMsgContentType ~> ResponseString("Bad gateway")
-                case Right(result) =>
-                  val statusCode = result.getStatusCode
-                  val responseBody = result.getResponseBody
-                  val contentType = Option(result.getContentType).getOrElse("text/plain; charset=utf-8")
-                  logger.debug(f"got result from processor [$statusCode%d: $responseBody%s]")
-                  Status(statusCode) ~> ContentType(contentType) ~> ResponseString(responseBody)
+                  logger.debug(f"forward query to processor ($host%s:$port%d)")
+                  statusLock.synchronized {
+                    queryTransferCount += 1
+                    logger.debug(s"queryTransferCount: $queryTransferCount")
+                  }
+                  req.either.apply() match {
+                    case Left(error) =>
+                      logger.error("failed to send request to processor [" + error.getMessage + "]")
+                      BadGateway ~> errorMsgContentType ~> ResponseString("Bad gateway")
+                    case Right(result) =>
+                      val statusCode = result.getStatusCode
+                      val responseBody = result.getResponseBody
+                      val contentType = Option(result.getContentType).getOrElse("text/plain; charset=utf-8")
+                      logger.debug(f"got result from processor [$statusCode%d: $responseBody%s]")
+                      Status(statusCode) ~> ContentType(contentType) ~> ResponseString(responseBody)
+                  }
               }
           }
       }
@@ -260,12 +421,13 @@ class GatewayPlan(ipAddress: String, port: Int,
       val maybeUnregister = maybeJson.flatMap(_.extractOpt[Unregister]).
         filter(_.action == "unregister")
 
-      if (!maybeRegister.isEmpty)
+      if (!maybeRegister.isEmpty) {
         logger.info(f"start registration (key: $key%s)")
-      else if (!maybeUnregister.isEmpty)
+      } else if (!maybeUnregister.isEmpty) {
         logger.info(f"start unregistration (key: $key%s)")
-      else
+      } else {
         logger.info(f"start registration or unregistration (key: $key%s)")
+      }
 
       if (maybeJson.isEmpty) {
         logger.warn("received query not in JSON format")
@@ -274,34 +436,43 @@ class GatewayPlan(ipAddress: String, port: Int,
         logger.warn("received unacceptable JSON query")
         BadRequest ~> errorMsgContentType ~> ResponseString("Unacceptable JSON")
       } else {
-        session2key.synchronized {
-          val maybeSessionId = key2session.get(key)
-          if (!maybeRegister.isEmpty) { // register
-            val register = maybeRegister.get
-            val (ip, port) = (register.ip, register.port)
-            logger.debug(f"registering $ip%s:$port%d")
-            maybeSessionId match {
-              case None =>
-                logger.error("attempted to register unknown key")
-                Unauthorized ~> errorMsgContentType ~> ResponseString("Unknown key")
-              case Some(sessionId) =>
-                session2loc += (sessionId -> (ip, port))
-                Ok ~> errorMsgContentType ~> ResponseString("Successfully registered")
-            }
-          } else { // unregister
-            logger.debug("unregistering")
-            maybeSessionId match {
-              case Some(sessionId) => // unregistering an existent key
-                session2key -= sessionId
-                key2session -= key
-                session2loc -= sessionId
-              case _ => // unregistering a nonexistent key
-                ()
-            }
-            Ok ~> errorMsgContentType ~> ResponseString("Successfully unregistered")
+        if (!maybeRegister.isEmpty) { // register
+          val register = maybeRegister.get
+          val (ip, port) = (register.ip, register.port)
+          logger.debug(f"registering $ip%s:$port%d")
+          val result = sessionManager.attachProcessorToSession(ip, port, key)
+          result match {
+            case Failure(t) =>
+              InternalServerError ~> errorMsgContentType ~> ResponseString(s"Failed to register key : ${key}")
+            case Success(sessionId) =>
+              logger.info(s"registered session. sessionId : $sessionId")
+              Ok ~> errorMsgContentType ~> ResponseString("Successfully registered")
+          }
+        } else { // unregister
+          logger.debug("unregistering")
+          val result = sessionManager.deleteSessionByKey(key)
+          result match {
+            case Failure(t) =>
+              InternalServerError ~> errorMsgContentType ~> ResponseString(s"Failed to unregister key : ${key}")
+            case Success((sessionId, key)) =>
+              if (sessionId != null) {
+                logger.info(s"unregistered session. sessionId: ${sessionId}")
+              } else {
+                logger.info(s"already delete session. key: ${key}")
+              }
+              Ok ~> errorMsgContentType ~> ResponseString("Successfully unregistered")
           }
         }
       }
+
+    case req@POST(Path("/status")) =>
+      val reqSource = req.remoteAddr
+      logger.debug(s"received HTTP request at /status from $reqSource")
+      val stsMap = getGatewayStatus()
+      val strStatus: String = write(GatewayStatus(stsMap))
+      logger.debug(s"Response: $strStatus")
+      Ok ~> errorMsgContentType ~> ResponseString(strStatus)
+
   }
 
   private def composeCallbackUrl(ip: String, port: Int, key: String): String = {
@@ -311,6 +482,12 @@ class GatewayPlan(ipAddress: String, port: Int,
   private def handleSubProcessOutput(in: InputStream,
                                      out: PrintStream): Unit = {
     val thread = new SubProcessOutputHandlerThread(in, out, logger)
+    thread.setDaemon(true)
+    thread.start()
+  }
+
+  private def handleSubProcess(process: Process, sessionId: String): Unit = {
+    val thread = new SubProcessHandlerThread(process, sessionId, this, logger)
     thread.setDaemon(true)
     thread.start()
   }
@@ -325,27 +502,40 @@ class GatewayPlan(ipAddress: String, port: Int,
     }
     sb.toString
   }
-}
 
-// An alphanumeric string generator.
-object Alphanumeric {
-  val random = new Random()
-  val chars = "0123456789abcdefghijklmnopqrstuvwxyz"
+  def close():Unit = {
+    sessionManager.close()
+  }
 
-  def generate(length: Int): String = {
-    val ret = new Array[Char](length)
-    this.synchronized {
-      for (i <- 0 until ret.length) {
-        ret(i) = chars(random.nextInt(chars.length))
-      }
-    }
-    new String(ret)
+  private def getGatewayStatus(): Map[String, Any] = {
+    val curTime = System.currentTimeMillis()
+    val opTime = curTime - startTime
+    val runtime = Runtime.getRuntime()
+    val usedMemory = runtime.totalMemory() - runtime.freeMemory()
+
+    var stsMap: LinkedHashMap[String, Any] = new LinkedHashMap()
+    stsMap.put("ipAddress", ipAddress)
+    stsMap.put("port", port)
+    stsMap.put("user", System.getProperty("user.name"))
+    stsMap.put("pid", java.lang.management.ManagementFactory.getRuntimeMXBean().getName().split("@")(0))
+    stsMap.put("sparkDistribution", sparkDistribution)
+    stsMap.put("runMode", runMode.name)
+    stsMap.put("zookeeper", scala.util.Properties.propOrElse("jubaql.zookeeper", ""))
+    stsMap.put("sessionIds", sessionManager.session2key.values)
+    stsMap.put("startTime", startTime)
+    stsMap.put("currentTime", curTime)
+    stsMap.put("oparatingTime", opTime)
+    stsMap.put("maxMemory", runtime.maxMemory())
+    stsMap.put("usedMemory", usedMemory)
+    stsMap.put("queryTransferCount", queryTransferCount)
+    stsMap.put("queryReceivedCount", queryReceivedCount)
+    stsMap
   }
 }
 
 private class SubProcessOutputHandlerThread(in: InputStream,
                                             out: PrintStream,
-                                            logger: com.typesafe.scalalogging.Logger) extends Thread {
+                                            logger: com.typesafe.scalalogging.slf4j.Logger) extends Thread {
   override def run(): Unit = {
     val reader = new BufferedReader(new InputStreamReader(in))
     try {
@@ -356,18 +546,63 @@ private class SubProcessOutputHandlerThread(in: InputStream,
       }
     } catch {
       case e: IOException =>
-        logger.warn("caught IOException in subprocess handler")
+        logger.warn("caught IOException in subprocess handler", e)
         ()
     }
     // Never close out here.
   }
 }
 
-sealed trait RunMode
+private class SubProcessHandlerThread(process: Process, sessionId: String, parent: GatewayPlan, logger: com.typesafe.scalalogging.slf4j.Logger) extends Thread {
+  override def run(): Unit = {
+    try {
+      process.waitFor()
+      Try(process.exitValue) match {
+        case Success(returnCode) =>
+          if (returnCode == 0) {
+            logger.info("Finished spark-submit")
+          } else {
+            logger.error(f"Failed to spark-submit. returnCode: $returnCode%s")
+          }
+        case Failure(e) =>
+          logger.error("Failed to spark-submit", e)
+      }
+    } catch {
+      case e: Exception =>
+        logger.error("caught Exception in spark-submit error handler", e)
+    } finally {
+      try {
+        parent.sessionManager.getSession(sessionId) match {
+          case Success(state) =>
+            state match {
+              case SessionState.Ready(_, _, _) | SessionState.Registering(_) =>
+                parent.sessionManager.deleteSessionById(sessionId) match {
+                  case Success((sessionId, key)) =>
+                    logger.debug(s"Finished terminate process. sessionId: ${sessionId}")
+                  case Failure(t) =>
+                    throw t
+                }
+              case _ =>
+                logger.debug(s"Terminate process is not required. sessionId: ${sessionId}")
+            }
+          case Failure(t) =>
+            throw t
+        }
+      } catch {
+        case e: Exception =>
+          logger.error(s"Failed to terminate process. sessionId: ${sessionId}", e)
+      }
+      process.destroy()
+    }
+  }
+}
+
+sealed abstract class RunMode(val name: String)
 
 object RunMode {
   case class Production(zookeeper: String, numExecutors: Int = 3, coresPerExecutor: Int = 2,
-                        sparkJar: Option[String] = None) extends RunMode
-  case class Development(numThreads: Int = 3) extends RunMode
-  case object Test extends RunMode
+                        sparkJar: Option[String] = None, sparkDriverMemory: Option[String] = None,
+                        sparkExecutorMemory: Option[String] = None) extends RunMode("Production")
+  case class Development(numThreads: Int = 3) extends RunMode("Development")
+  case object Test extends RunMode("Test")
 }
